kube-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: students-ingress
spec:
  backend:
    serviceName: students-service
    servicePort: 30632
